ent/api/v1: add network, subnet and ifname to privnet addressing request
Extend the private networks addressing API method to additionally
propagate the network and subnet parameters retrieved from the CNI
configuration, if any. Moreover, propagate the interface name, which
can be later used to identify the network attachment in case of
multi-NIC pods.
