# enterprise/api/v1/openapi.yaml
@@ -53,9 +53,12 @@ paths:
       tags:
         - network
       parameters:
+        - "$ref": "#/parameters/network-name"
+        - "$ref": "#/parameters/network-subnet"
         - "$ref": "#/parameters/network-pod-name"
         - "$ref": "#/parameters/network-pod-namespace"
         - "$ref": "#/parameters/network-pod-uid"
+        - "$ref": "#/parameters/network-ifname"
       responses:
         '200':
           description: Success
@@ -80,6 +83,18 @@ paths:
           schema:
             "$ref": "#/definitions/EnterpriseDaemonConfiguration"
 parameters:
+  network-name:
+    name: network
+    description: Name of the target private network, if provided via CNI configuration
+    required: false
+    in: query
+    type: string
+  network-subnet:
+    name: subnet
+    description: Name of the target subnet in the private network, if provided via CNI configuration
+    required: false
+    in: query
+    type: string
   network-pod-name:
     name: pod-name
     description: Kubernetes pod name for which to query the network attachment
@@ -98,6 +113,13 @@ parameters:
     required: true
     in: query
     type: string
+  network-ifname:
+    name: ifname
+    description: Interface name, used to identify the network attachment in case of multi-NIC pods
+    required: true
+    in: query
+    type: string
+
 definitions:
   Error:
     type: string
